2009-07-03  Richard Guenther  <rguenther@suse.de>

PR tree-optimization/40640
	* tree-switch-conversion.c (build_arrays): Perform arithmetic
	in original type.

	* gcc.c-torture/compile/pr40640.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@149211 138bc75d-0d04-0410-961f-82ee72b054a4